Fix customization modal in dark mode

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -181,7 +181,7 @@ body, #__next {
   }
 
   .toggle-btn {
-    @apply inline-block text-sm bg-gray-200 rounded-full px-3 py-1 font-medium mr-2 mb-2 focus:outline-none transition;
+    @apply inline-block text-sm bg-gray-200 dark:bg-gray-700 rounded-full px-3 py-1 font-medium mr-2 mb-2 focus:outline-none transition;
   }
 
   .toggle-btn-selected {
